;;;; -*- coding: utf-8; -*-
changes in sbcl-1.0.22 relative to 1.0.21:
  * minor incompatible change: --disable-debugger toplevel option now takes
    effect before processing of initialization files and --eval or --load
    options.
  * enhancement: inoccous calls to EVAL or generic functions dispatching
    on subclasses of eg. STREAM no longer cause compiler notes to appear.
  * enhancement: the system no longer resignals errors from --load and
    --eval toplevel arguments as SIMPLE-ERRORS, which caused restarts
    associated with the original error to be lost. (thanks to Ariel
    Badichi)
  * enhancement: :DONT-SAVE keyword argument has been added to
    LOAD-SHARED-OBJECT for controlling interaction with
    SAVE-LISP-AND-DIE.
  * bug fix: ADJUST-ARRAY on multidimensional arrays used bogusly give
    them a fill pointer unless :DISPLACED-TO or :INITIAL-CONTENTS were
    provided. (reported by Cedric St-Jean)
  * bug fix: circularity handling in the reader did not treat raw
    structure slots correctly. (reported by Cedric St-Jean)
  * bug fix: SERVE-EVENT occasionally signaled an error about bogus
    file descriptors when there were none.
  * bug fix: DEFINE-COMPILER-MACRO support of destructuring lambda-lists
    was broken. (reporteed by Willem Broekema)
  * bug fix: SB-EXT:NATIVE-NAMESTRING on Windows did not work on
    pathnames without a directory.

changes in sbcl-1.0.21 relative to 1.0.20:
  * new feature: the compiler is able to track the effective type of a
    generic function across method addition and removal.
  * new feature: SB-EXT:ATOMIC-INCF allows atomic incrementation of
    appropriately typed structure slots without locking.
  * new feature: SB-EXT:CALL-WITH-TIMING provides access to timing
    information like those gathered by TIME using a programming-friendly
    interface.
  * new feature: TIME reports time taken even if the form performs a
    non-local transfer of control.