@@ -3,6 +3,9 @@ changes in sbcl-1.0.22 relative to 1.0.21:
   * minor incompatible change: --disable-debugger toplevel option now takes
     effect before processing of initialization files and --eval or --load
     options.
+  * new feature: new commandline argument: --script, which supports
+    shebang lines. See documentation for details. (based on work by
+    Kevin Reid)
   * enhancement: inoccous calls to EVAL or generic functions dispatching
     on subclasses of eg. STREAM no longer cause compiler notes to appear.
   * enhancement: the system no longer resignals errors from --load and
